fix: remove justify alignment on h2 and h3 for text-content class om small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -832,4 +832,8 @@ figcaption a {
     .elven-city {
         margin-top: 30px;
     }
+
+    .text-content h2, .text-content h3{
+        text-align: left;
+    }
 }
